# MandelbrotSet

./: .gitattributes  .gitignore  Build.md  CMakeLists.txt  README.md
.github/workflows/: build.yaml  report.yaml
cmake/: CPM.cmake  FindGMP.cmake  FindMPFR.cmake  FindSTDEXEC.cmake
doc/: Makefile  algorithms.tex  optimizations.tex  references.bib  report-cn.tex  report.tex
docs/: report.tex
include/mandelbrot/: BaseMandelbrotSet.h  ExtendedDouble.cuh  MandelbrotSet.h  MandelbrotSetCuda.h  MandelbrotSetMPFR.h
src/: Algorithm.cpp  Algorithm.h  BaseMandelbrotSet.h  CMakeLists.txt  ColorSchemes.cpp  ColorSchemes.h  ExtendedDouble.cu  ExtendedDouble.cuh  ImageWriter.cpp  ImageWriter.h  MPFRPool.h  MandelbrotSet.cpp  MandelbrotSet.h  MandelbrotSetCuda.cu  MandelbrotSetCuda.h  MandelbrotSetMPFR.cpp  MandelbrotSetMPFR.h  Utility.h  VideoGenerator.cpp  VideoGenerator.h  main.cpp
